--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Object Dance Party</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script src="lib/jquery.js"></script>
-    <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
-  </head>
-  <body>
-    <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
-    <script src="src/init.js"></script>
-  </body>
+
+<head>
+  <title>Object Dance Party</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="lib/jquery.js"></script>
+  <script src="src/dancer.js"></script>
+  <script src="src/blinkyDancer.js"></script>
+</head>
+
+<body>
+  <div class="topbar">
+    <span class="title">object dance party</span>
+    <a herf='#' class='sponge' data-sponge-dancer-maker="makeSpongeDancer">add sponge bob dancing</a>
+    <a href="#" class='guy' data-guy-dancer-maker="makeGuyDancer">add guy dancing</a>
+    <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a> -->
+  </div>
+  <script src="src/init.js"></script>
+  <script src="src/spongeBob.js"></script>
+  <script src="src/spongeDancer.js"></script>
+  <script src="src/guy.js"></script>
+  <script src="src/guyDancing.js"></script>
+</body>
+
 </html>
